@@ -1,10 +1,13 @@
 from zope.interface import implements
+from zope.component.interfaces import ObjectEvent
 
 from collective.mollie.interfaces import IMollieIdealPaymentEvent
 
 
-class MollieIdealPaymentEvent(object):
+class MollieIdealPaymentEvent(ObjectEvent):
     implements(IMollieIdealPaymentEvent)
 
-    def __init__(self, obj):
-        self.obj = obj
+    def __init__(self, context, request):
+        super(MollieIdealPaymentEvent, self).__init__(context)
+        self.context = context
+        self.request = request
