@@ -4,7 +4,9 @@ Changelog
 0.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- The MollieIdealPaymentEvent now subclasses the ObjectEvent and
+  provides the request.
+  [markvl]
 
 
 0.1 (2012-04-04)
